force-app/main/default/objects/Cart_Item__c/Cart_Item__c.object-meta.xml
<CustomObject>
    <label>Cart Item</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Cart Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>