force-app/main/default/objects/Cart_Item__c/fields/Shopping_Cart__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Cart__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Shopping Cart</label>
    <referenceTo>Shopping_Cart__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>