force-app/main/default/objects/Cart_Item__c/validationRules/Quantity_should_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_should_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Book__c</errorDisplayField>
    <errorMessage>Quantity cannot be less than 1</errorMessage>
</ValidationRule>