force-app/main/default/objects/Cart_Item__c/validationRules/Stock_Level_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_Level_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &gt; Book__r.Stock_Level__c</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>The requested quantity exceeds available stock.</errorMessage>
</ValidationRule>